# rustgame

./: .gitignore  Cargo.toml  imgui.ini  readme.md
aseprite/: Cargo.toml  output.md  readme.md
aseprite/src/: decode_test.rs  encode_test.rs  frame.rs  lib.rs  map.ase  player.ase  test.ase  test.rs
aseprite/src/ase/: frame.rs  header.rs  mod.rs
aseprite/src/ase/chunks/: cel.rs  color_profile.rs  layer.rs  mod.rs  palette.rs  tileset.rs  user.rs
aseprite/src/chunks/: cel.rs  mod.rs  slice.rs  tag.rs
aseprite/src/sprite/: mod.rs
aseprite/src/tilemap/: mod.rs
common/: Cargo.toml
common/src/: lib.rs
engine/: Cargo.toml
engine/src/: lib.rs
engine/src/audio/: mod.rs
engine/src/ecs/: component.rs  mod.rs  worlds.rs
engine/src/graphics/: batch.rs  blend.rs  common.rs  drawcall.rs  material.rs  mesh.rs  mod.rs  shader.rs  target.rs  texture.rs
game/: Cargo.toml
game/src/: aseprite.rs  content.rs  crt_shader.fs  game_state.rs  lib.rs  map.rs  scene.rs  target_manager.rs
game/src/assets/: map.ase  map.json  map.ldtk  player.ase  sample(unused).json
game/src/components/: background.rs  button.rs  collider.rs  light.rs  mod.rs  mover.rs  player.rs  position.rs  room.rs  rope.rs  sprite.rs
game/src/system/: animation_system.rs  editor.rs  light_normals_outline.fs  light_shader.fs  light_system.rs  mod.rs  movement_system.rs  outline.fs  player_system.rs  render_system.rs  room_render_system.rs  rope_system.rs  scene_system.rs
rooms/: world.yml
src/: aseprite.rs  content.rs  gamelib.rs  main.rs  map.ldtk  player.rs  scene.rs
src/assets/: Sprite-0001.aseprite  background-atlas.notbin  elements.aseprite  map.ldtk  player.ase  sheet.json
src/assets/atlas/: sheet.aseprite  sheet.json
src/components/: background.rs  ball.rs  collider.rs  controller.rs  gravity.rs  light.rs  mod.rs  mover.rs  player.rs  position.rs  room.rs  rope.rs  sprite.rs
src/system/: animation_system.rs  light_system.rs  mod.rs  movement_system.rs  player_system.rs  render_system.rs  room_system.rs  rope_system.rs  scene_system.rs
