[package]
name = "nand2tetris"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
engine = { path = "./engine" }
nalgebra-glm = "0.19.0"
rand = "0.8.5"
imgui = ">=0.9.0, <0.10.0"
stb_image_rust = "2.27.2"

[dev-dependencies]
pprof = { version = "0.13", features = ["flamegraph"] }