[workspace]
members=["game", "engine", "aseprite"]

[workspace.dependencies]
sdl2 = "0.36"
imgui = { version = "0.11.0", features = ["docking"] }
gl = "0.14.0"
nalgebra-glm = "0.19.0"

[package]
name = "runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "./common" }
notify = "5"
sdl2 = { workspace = true }
once_cell = "1.13.0"

imgui = { workspace = true }
# imgui-sdl2-support = "0.11.0" # A backend platform that handles window/input device events.
imgui-opengl-renderer = "0.12.0" # Draw ImGui

imgui-sdl2 = "0.15.3" # SDL2 Input handling for imgui-rs
# imgui-sdl2 = "0.15.1" #input handling - alternative (unofficial from imgui-rs)
