[package]
name = "engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = "0.34.5"
gl = "0.14.0"
imgui = ">=0.9.0, <0.10.0"
imgui-sdl2-support = ">=0.9.0, <0.10.0" # windowing and event handling
imgui-opengl-renderer = "0.12.0" # rendering