[package]
name = "engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = "0.34.0"
gl = "0.14.0"             #OpenGL bindings
nalgebra-glm = "0.19.0"
stb_image_rust = "2.27.2"
rand = "0.8.5"

# dev dependencies
imgui = ">=0.9.0, <0.10.0"
imgui-sdl2 = "0.15.1"            # imgui windowing and event handling
imgui-opengl-renderer = "0.12.0" # imgui rendering