[package]
name = "engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
sdl2 = { workspace = true}
gl = { workspace = true }             #OpenGL bindings
nalgebra-glm = {workspace = true} 
stb_image_rust = "2.27.2"
rand = "0.8.5"
vorbis_rs = "0.5.4"

# dev dependencies
# imgui = ">=0.9.0, <0.10.0"
# imgui-sdl2 = "0.15.1"            # imgui windowing and event handling
# imgui-opengl-renderer = "0.12.1" # imgui rendering