[package]
name = "game"
version = "0.1.0"
edition = "2021"

[dependencies]
engine = { path = "../engine" }
common = { path = "../common" }
aseprite = { path = "../aseprite" }
nalgebra-glm = "0.19.0"
rand = "0.8.5"
ldtk_rust = "0.6.0"
sdl2 = "0.34.0"
serde = "1.0.219"
serde-big-array = "0.5.1"
serde_yml = "0.0.12"

[lib]
crate-type = ["cdylib"]
