[package]
name = "game"
version = "0.1.0"
edition = "2021"

[dependencies]
engine = { path = "../engine" }
common = { path = "../common" }
aseprite = { path = "../aseprite" }
nalgebra-glm = {workspace = true}
rand = "0.9.1"
ldtk_rust = "0.6.0"
sdl2 = { workspace = true}
serde = "1.0.219"
serde-big-array = "0.5.1"
serde_yml = "0.0.12"

[lib]
crate-type = ["cdylib"]
